# service-pmdarima-prediction

./: .dockerignore  .gitignore  Dockerfile  app.py  docker-compose.yml  docker-compose_training.yml  implementations.txt  interfaces.py  internal_runner.py  openapi.yaml  prediction_operation.py  pyproject.toml  readme.md  requirements.txt  training-docker-compose.yml
.github/workflows/: docker.yaml
calculations/: predictions.py  time_converter.py
controller/: model_handling.py  service_controller.py
data_results/: save_load_models.py  transformer.py
database/: data_inserter.py  data_selector.py  db_con.py  db_connector.py  file_reader.py
files/: json_reader.py  saving_operations.py  transformer.py
forecasting/: data_forecast.py  model_metrics.py  model_training.py
operations/: requests.py
operations/calculations/: analysis.py  json_reader.py  predictions.py  save_load.py  weather.py
smartmeterdata/: smartmeter_transformer.py
weather/: dwd_weather.py
