[project]
name = "service-water-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blinker==1.9.0",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "cython==3.0.12",
    "dotenv==0.9.9",
    "flask==3.1.1",
    "flask-cors==5.0.1",
    "fonttools==4.56.0",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.5",
    "joblib==1.4.2",
    "kiwisolver==1.4.8",
    "markupsafe==3.0.2",
    "matplotlib==3.10.0",
    "numpy==1.26.4",
    "packaging==24.2",
    "pandas==2.2.3",
    "patsy==1.0.1",
    "pillow==11.1.0",
    "pmdarima==2.0.4",
    "psycopg==3.2.6",
    "psycopg-binary==3.2.6",
    "pyparsing==3.2.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "pytz==2025.1",
    "requests==2.32.3",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "setuptools==75.8.2",
    "six==1.17.0",
    "statsmodels==0.14.4",
    "threadpoolctl==3.5.0",
    "typing-extensions==4.13.1",
    "tzdata==2025.1",
    "urllib3==2.3.0",
    "werkzeug==3.1.3",
]
